--- a/projeto.html
+++ b/projeto.html
@@ -12,15 +12,32 @@
 </style>
   <body>
     
-    <center><img background src="https://cdn-icons-png.flaticon.com/512/3997/3997606.png" alt="Image" height="120" width="100">
+    <center><img background src="https://cdn-icons-png.flaticon.com/512/3997/3997606.png" alt="Image" height="120" width="100"></center>
     
-    <audio controls autoplay>
-        <source src="../audio/Hype Boy.mp3">
+   <center><audio controls autoplay>
+        <source src="../Documents/Github/audio/Hype Boy.mp3">
         </audio>
-    </center>
-    <p><h1><center><font color="#800080"> que é kpop: principais grupos, indústria e expressões</font></center></h1></p>
+        </center
+   
+        <p><h1><center><font color="#800080">O que é kpop: principais grupos, indústria e expressões</font></center></h1></p>
+<p><h3>O kpop – ou k-pop -, como o próprio significado do nome – Korean Pop – sugere, é um estilo de música que nasceu do pop na Coreia do Sul. Assim, é fácil detectarmos traços comuns inclusive ao pop ocidental, como músicas chicletes com uma forte batida, mas com outros elementos que vieram da interpretação sul coreana desse gênero musical: super produções, clipes que parecem curta-metragens e coreografias de cair o queixo.
 
+  Hoje é inevitável ouvirmos falar do Kpop, mas se engana quem pensa que esse fenômeno surgiu faz pouco tempo. O estilo musical já bombava no Leste da Ásia (em países como Japão, China e Tailândia) desde a década de 90, tendo o início dos seus grupos mais icônicos surgido nos anos 2000.
   
+  Aqui no Ocidente, torna-se difícil não associarmos seus grupos aos antigos modelos de boybands e girlbands, mas há suas peculiaridades no formato de kpop feminino e masculino, vista principalmente na rotina dos “idols”. Entenda.</h3>
+</p>
+<p><h2><font color="#800080">Grupos de kpop</font></h2></p>  
+
+<p><h3>É impossível falarmos sobre o que é kpop sem comentarmos sobre os seus famosos grupos. O estilo musical é marcado por conjuntos que geralmente variam de 4 chegando a números que superam 13 integrantes! 
+
+  O interessante aqui é que, diferentemente dos grupos de boybands e girlbands ocidentais, temos exemplos de referências na área do kpop que continuam juntos há mais de 10 anos. Alguns exemplos de grupos que surgiram nos “primórdios” do kpop e são populares até hoje são BIG BANG, Super Junior, SHINee e – apesar do disband –  2NE1.
+  
+  Estes grupos tiveram uma importância enorme na popularização do kpop na Coreia, na Ásia e agora no mundo todo. Vale a pena dar uma olhada, suas músicas não perdem em nada para as atuais.</h3></p>
+
+<center><video width="1000" height="500" controls>
+<source src="./video/video01.mp4" type="video/mp4">
+</center></video>
+
 </body>
 </html>
 
